--- a/CSFPOSWare/CSFPOSWare.csproj
+++ b/CSFPOSWare/CSFPOSWare.csproj
@@ -153,6 +153,8 @@
     <Compile Include="helpers\DatabaseHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\Logger.cs" />
+    <Compile Include="Utils\Util.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
