--- a/CSFPOSWare/CSFPOSWare.csproj
+++ b/CSFPOSWare/CSFPOSWare.csproj
@@ -151,6 +151,25 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="helpers\DatabaseHelper.cs" />
+    <Compile Include="Models\BaseModel.cs" />
+    <Compile Include="Models\Configuration.cs" />
+    <Compile Include="Models\CSConfiguration.cs" />
+    <Compile Include="Models\CSEod.cs" />
+    <Compile Include="Models\CSSale.cs" />
+    <Compile Include="Models\CSSaleItem.cs" />
+    <Compile Include="Models\CSSaleItemDiscount.cs" />
+    <Compile Include="Models\CSSaleItemTax.cs" />
+    <Compile Include="Models\CSSaleTender.cs" />
+    <Compile Include="Models\Discount.cs" />
+    <Compile Include="Models\Item.cs" />
+    <Compile Include="Models\Media.cs" />
+    <Compile Include="Models\Sale.cs" />
+    <Compile Include="Models\SaleDiscount.cs" />
+    <Compile Include="Models\SaleItem.cs" />
+    <Compile Include="Models\SaleItemDiscount.cs" />
+    <Compile Include="Models\SaleTax.cs" />
+    <Compile Include="Models\SaleTender.cs" />
+    <Compile Include="Models\Tax.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Logger.cs" />
