Updated SettleCheckForm. Added GenericDialogForm.

--- a/CSFPOSWare/CSFPOSWare.csproj
+++ b/CSFPOSWare/CSFPOSWare.csproj
@@ -165,6 +165,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\GenericDialogForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\GenericDialogForm.Designer.cs">
+      <DependentUpon>GenericDialogForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\SettleCheckForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -204,6 +210,9 @@
     <Compile Include="Utils\Util.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\GenericDialogForm.resx">
+      <DependentUpon>GenericDialogForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\SettleCheckForm.resx">
       <DependentUpon>SettleCheckForm.cs</DependentUpon>
@@ -260,6 +269,24 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\ButtonBGBlankPressed.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\btn_back.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\btn_back_clicked.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\btn_check.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\btn_check_clicked.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\btn_x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\btn_x_clicked.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
